--- a/package.json
+++ b/package.json
@@ -15,14 +15,13 @@
     "@apollo/client": "^3.11.4",
     "@apollo/server": "^4.11.0",
     "@as-integrations/next": "^3.1.0",
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@prisma/client": "^5.18.0",
     "framer-motion": "^11.3.24",
-    "graphql": "^16.9.0",
-    "graphql-tag": "^2.12.6",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
